--- a/app/src/main/res/drawable/refresh_load.xml
+++ b/app/src/main/res/drawable/refresh_load.xml
@@ -2,5 +2,6 @@
 <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
     android:drawable="@mipmap/refresh_load"
     android:fromDegrees="0.0"
+    android:duration="600"
     android:pivotX="50.0%"
     android:pivotY="50.0%"/>
