--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:background="@color/white"
     tools:context=".dynamic.PublishActivity">
 
     <include layout="@layout/title_common" />
@@ -16,19 +16,157 @@
         android:background="@color/line2" />
 
     <EditText
-        android:padding="@dimen/dp15"
-        android:textSize="@dimen/sp14"
-        android:hint="输入你想说的话，给懂的人"
         android:id="@+id/et_content"
-        android:gravity="start"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:background="@null" />
+        android:background="@null"
+        android:gravity="start"
+        android:hint="输入你想说的话，给懂的人"
+        android:padding="@dimen/dp15"
+        android:textSize="@dimen/sp14" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp10"
         android:layout_marginRight="@dimen/dp10"
+        android:layout_weight="1"></android.support.v7.widget.RecyclerView>
+
+    <LinearLayout
+        android:id="@+id/ll_voice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:visibility="gone">
+
+        <RelativeLayout
+            android:id="@+id/rl_voice"
+            android:layout_width="205dp"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/dt_yy">
+
+            <ImageView
+                android:id="@+id/iv_image_gif"
+                android:layout_width="@dimen/dp30"
+                android:layout_height="@dimen/dp30"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp20"
+                android:padding="@dimen/dp5"
+                android:src="@mipmap/yystop"
+                android:textColor="@color/textColor666"
+                android:textSize="@dimen/sp16" />
+
+            <TextView
+                android:id="@+id/tv_music_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dp20"
+                android:text="0s"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp16" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/iv_del_voice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp15"
+            android:src="@mipmap/fdt_ch" />
+        <!--<SeekBar-->
+        <!--android:id="@+id/playSeekBar"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="5dp" />-->
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp0.5"
+        android:background="@color/line2" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/iv_add_pics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp15"
+            android:src="@mipmap/fdt_tp" />
+
+        <ImageView
+            android:id="@+id/iv_add_voice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp15"
+            android:src="@mipmap/fdt_yy" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_record"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:background="#f5f5f5"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp60"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_withdraw"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/qx"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/iv_start_record"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp30"
+                android:layout_marginRight="@dimen/dp30"
+                android:src="@mipmap/ly" />
+
+            <ImageView
+                android:id="@+id/iv_sure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ywc"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_record_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp5"
+            android:text="开始录音" />
+
+        <TextView
+            android:id="@+id/tv_record_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp5"
+            android:text="11s"
+            android:visibility="gone" />
+
+    </LinearLayout>
 </LinearLayout>
