--- a/app/src/main/res/layout/item_dynamic.xml
+++ b/app/src/main/res/layout/item_dynamic.xml
@@ -65,20 +65,65 @@
         android:textSize="@dimen/sp14"
         android:visibility="gone" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/item_recycleView"
+    <RelativeLayout
+        android:id="@+id/rl_voice_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_more"
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginRight="@dimen/dp45"
         android:layout_marginTop="@dimen/dp10"
-        android:layout_toEndOf="@+id/iv_head"></android.support.v7.widget.RecyclerView>
+        android:layout_toEndOf="@+id/iv_head">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/item_recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:id="@+id/ll_voice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <RelativeLayout
+                android:id="@+id/rl_voice"
+                android:layout_width="205dp"
+                android:layout_height="wrap_content"
+                android:background="@mipmap/dt_yy">
+
+                <ImageView
+                    android:id="@+id/iv_image_gif"
+                    android:layout_width="@dimen/dp30"
+                    android:layout_height="@dimen/dp30"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dp20"
+                    android:padding="@dimen/dp5"
+                    android:src="@mipmap/yystop"
+                    android:textColor="@color/textColor666"
+                    android:textSize="@dimen/sp16" />
+
+                <TextView
+                    android:id="@+id/tv_music_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dp20"
+                    android:text="0s"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp16" />
+            </RelativeLayout>
+
+
+        </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/item_recycleView"
+        android:layout_below="@+id/rl_voice_img"
         android:layout_marginBottom="@dimen/dp15"
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginTop="@dimen/dp10"
@@ -111,6 +156,17 @@
             android:textColor="@color/textColor2"
             android:textSize="@dimen/sp12" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:paddingTop="30dp"
+        android:paddingRight="@dimen/dp20"
+        android:paddingLeft="@dimen/dp20"
+        android:paddingBottom="@dimen/dp20"
+        android:src="@mipmap/more1" />
 
     <View
         android:layout_width="match_parent"
